# MCT-i2c-vmmio

./: CMakeLists.txt  LICENSE  README.md  main.c  rp2040_nodeConstants.h
core_1/: core_1_process.c  core_1_process.h
extra_not_included/: CMakeLists.txt  i2c_example.c  servo_controller.c
i2c/: i2c_protocal.c  i2c_protocal.h
vmmio/: vmmio.c  vmmio.h
